# DynamicWallpaper

./: CMakeLists.txt  CodeCvt.h  main.cpp
sdk/include/vlc/: deprecated.h  libvlc.h  libvlc_media.h  libvlc_media_player.h  libvlc_vlm.h
sdk/include/vlc/plugins/: vlc_block.h
winPlayer/: player.cpp  player.h  resource.h  winmain.cpp
